[package]
name = "crane-bug-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus" }
wasm-logger = "0.2.0"
